--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
 
         <title>MLZS Tirupur</title> 
-        <script type="text/javascript" charset="utf-8" src="js/jquery_1.5.2.min.js"></script>
-        <script type="text/javascript" src="js/PushNotification.js"></script>
+        <script src="js/jquery_1.5.2.min.js"></script>
+        <script src="js/PushNotification.js"></script>
         
     </head>
     <body>
