--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,33 @@
     <script src="js/jquery.mobile-1.4.5.min.js"></script>
     <script src="js/PushNotification.js"></script>
     <script src="js/index.js"></script> 
+    <script src="https://cdn.pubnub.com/pubnub-dev.js"></script>
+
+    <!-- Instantiate PubNub -->
+    <script type="text/javascript">
+
+        var PUBNUB_demo = PUBNUB.init({
+            publish_key: 'pub-c-68bb8ae6-e845-48f5-a701-0b420410e3b0',
+            subscribe_key: 'sub-c-f82f75b0-5abb-11e5-81b5-02ee2ddab7fe'
+        });
+
+        // Subscribe to the demo_tutorial channel
+        PUBNUB_demo.subscribe({
+            channel: 'demo_tutorial',
+            message: function(m){console.log(m)}
+        });
+
+        // Publish a simple message to the demo_tutorial channel
+        PUBNUB_demo.publish({
+            channel: 'demo_tutorial',
+            message: {"color":"blue"}
+        });
+
+        
+    </script>
+
+
+
 
 </head>
 <body class="ui-mobile-viewport ui-overlay-a">  
