--- a/www/index.html
+++ b/www/index.html
@@ -29,14 +29,8 @@
         
     </head>
     <body>
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <div data-role="page" id="login" data-theme="a"  class="app">
+       
+        <div data-role="page" id="login" data-theme="a">
         <div data-role="header" data-theme="a"  id="deviceready"> 
             <h3>Parents Login</h3>
         </div>
