--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,10 @@
        
         <div class="app">
             <h1>PhoneGap</h1>
-             
+            <div id="deviceready" class="blink">
+                <p class="event listening">Connecting to Device</p>
+                <p class="event received">Device is Ready</p>
+            </div>
         </div>
         <script type="text/javascript" src="phonegap.js"></script>
         <script type="text/javascript" src="PushNotification.js"></script>
